feat: Add left sidebar navigation with responsive tablet view and remove the top navigation bar.

--- a/audio.htm
+++ b/audio.htm
@@ -37,7 +37,6 @@
             /* Hover Grey */
             --border: #3f3f46;
             /* Border Grey */
-
             --accent: #ccff00;
             /* HOPE Lime */
             --accent-dim: #88aa00;
@@ -69,11 +68,10 @@
             height: 100vh;
             overflow: hidden;
             /* App-like feel */
-            display: grid;
             grid-template-areas:
-                "main right"
-                "player player";
-            grid-template-columns: 1fr 300px;
+                "sidebar main right"
+                "player player player";
+            grid-template-columns: var(--sidebar-width) 1fr 300px;
             grid-template-rows: 1fr var(--player-height);
         }
 
@@ -182,6 +180,17 @@
             display: flex;
             flex-direction: column;
             gap: 2rem;
+
+            /* Hide Scrollbar */
+            scrollbar-width: none;
+            /* Firefox */
+            -ms-overflow-style: none;
+            /* IE/Edge */
+        }
+
+        .sidebar-scroll-area::-webkit-scrollbar {
+            display: none;
+            /* Chrome/Safari */
         }
 
         /* --- NAVIGATION GROUPS --- */
@@ -632,10 +641,30 @@
             }
         }
 
-        /* Tablet */
+        /* Tablet MODE (Vertical Icons) */
         @media (max-width: 1024px) {
             body {
-                grid-template-columns: 1fr 240px;
+                grid-template-columns: 80px 1fr 240px;
+            }
+
+            .sidebar-container {
+                width: 80px;
+            }
+
+            .brand-text,
+            .group-header,
+            .nav-text {
+                display: none;
+            }
+
+            .brand-header {
+                justify-content: center;
+                padding: 0;
+            }
+
+            .nav-item {
+                justify-content: center;
+                padding: 0.75rem 0;
             }
 
             .header-inner {
@@ -655,7 +684,7 @@
             }
 
             .header-inner {
-                padding: 1rem;
+                padding: 1rem 1.5rem;
             }
 
             .page-heading {
@@ -1932,10 +1961,72 @@
 
 <body>
 
-    <!-- 1. LEFT SIDEBAR REMOVED -->
+    <!-- 1. LEFT SIDEBAR RESTORED -->
+    <nav id="sidebar" class="sidebar-container">
+        <div class="brand-header">
+            <div class="logo-icon-wrapper">
+                <i data-lucide="cpu" class="icon-glow"></i>
+            </div>
+            <span class="brand-text font-mono">HOPE <span class="text-accent">OS</span></span>
+        </div>
+
+        <div class="sidebar-scroll-area">
+            <div class="nav-group">
+                <h4 class="group-header font-mono">Library_V.2</h4>
+                <ul class="nav-list">
+                    <li>
+                        <button class="nav-item active" onclick="switchTab('podcasts')" aria-label="Library">
+                            <i data-lucide="mic"></i>
+                            <span class="nav-text">Podcasts</span>
+                            <div class="active-indicator"></div>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-item" onclick="switchTab('videos')" aria-label="Video Stream">
+                            <i data-lucide="play-square"></i>
+                            <span class="nav-text">Video Stream</span>
+                            <div class="active-indicator"></div>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-item" onclick="switchTab('mindmap')" aria-label="Neural Map">
+                            <i data-lucide="network"></i>
+                            <span class="nav-text">Neural Map</span>
+                            <div class="active-indicator"></div>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-item" onclick="switchTab('flashcards')" aria-label="Flash Recall">
+                            <i data-lucide="zap"></i>
+                            <span class="nav-text">Flash Recall</span>
+                            <div class="active-indicator"></div>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="nav-group">
+                <h4 class="group-header font-mono">S4_Modules</h4>
+                <ul class="nav-list">
+                    <li><button class="nav-item"><i data-lucide="hash"></i><span class="nav-text">Maths
+                                (Graph)</span></button></li>
+                    <li><button class="nav-item"><i data-lucide="database"></i><span class="nav-text">DBMS
+                                Arch</span></button></li>
+                    <li><button class="nav-item"><i data-lucide="cpu"></i><span class="nav-text">OS
+                                Principals</span></button></li>
+                    <li><button class="nav-item"><i data-lucide="code"></i><span class="nav-text">Data
+                                Science</span></button></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="sidebar-footer">
+            <button class="nav-item"><i data-lucide="settings"></i><span class="nav-text">Sys_Config</span></button>
+        </div>
+    </nav>
 
     <!-- 2. MAIN STAGE -->
-    <main id="main-stage" class="stage-container" style="margin-left: 0.5rem;">
+    <main id="main-stage" class="stage-container">
 
         <header class="stage-header">
             <div class="header-inner">
@@ -1946,22 +2037,6 @@
                         <span class="status-dot"></span>
                         <span class="status-text font-mono">SYS_STATUS: <span class="text-accent">OPTIMAL</span></span>
                     </div>
-                </div>
-
-                <!-- TOP NAVIGATION -->
-                <div class="top-nav">
-                    <button class="top-nav-btn active" onclick="switchTab('podcasts')" id="nav-podcasts">
-                        <i data-lucide="mic" width="16"></i> Podcasts
-                    </button>
-                    <button class="top-nav-btn" onclick="switchTab('videos')" id="nav-videos">
-                        <i data-lucide="play-square" width="16"></i> Videos
-                    </button>
-                    <button class="top-nav-btn" onclick="switchTab('mindmap')" id="nav-mindmap">
-                        <i data-lucide="network" width="16"></i> Map
-                    </button>
-                    <button class="top-nav-btn" onclick="switchTab('flashcards')" id="nav-flashcards">
-                        <i data-lucide="zap" width="16"></i> Recall
-                    </button>
                 </div>
 
                 <div class="header-controls">
@@ -2499,12 +2574,11 @@
         function switchTab(tabName) {
             state.currentTab = tabName;
 
-            // Update Top Nav Active State
-            const btns = document.querySelectorAll('.top-nav-btn');
-            btns.forEach(btn => {
-                btn.classList.remove('active');
-                if (btn.id === `nav-${tabName}`) {
-                    btn.classList.add('active');
+            // Update Active State on Sidebar
+            document.querySelectorAll('.nav-item').forEach(el => {
+                el.classList.remove('active');
+                if (el.getAttribute('onclick') && el.getAttribute('onclick').includes(`'${tabName}'`)) {
+                    el.classList.add('active');
                 }
             });
 
