--- a/audio.htm
+++ b/audio.htm
@@ -69,9 +69,9 @@
             overflow: hidden;
             /* App-like feel */
             grid-template-areas:
-                "sidebar main right"
-                "player player player";
-            grid-template-columns: var(--sidebar-width) 1fr 300px;
+                "main right"
+                "player player";
+            grid-template-columns: 1fr 300px;
             grid-template-rows: 1fr var(--player-height);
         }
 
@@ -128,19 +128,64 @@
 
         /* --- LAYOUT ZONES --- */
 
-        /* --- SIDEBAR CONTAINER --- */
-        .sidebar-container {
-            grid-area: sidebar;
-            background: rgba(9, 9, 11, 0.95);
-            /* High opacity for legibility */
-            border-right: 1px solid var(--border);
+        /* --- BOTTOM NAV (Floating) --- */
+        .bottom-nav {
+            position: fixed;
+            bottom: calc(var(--player-height) + 20px);
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            background: rgba(18, 18, 20, 0.85);
+            backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 10px 20px;
+            border-radius: 50px;
+            z-index: 100;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s;
+        }
+
+        .bottom-nav.nav-hidden {
+            transform: translate(-50%, 100px);
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .b-nav-item {
             display: flex;
             flex-direction: column;
-            height: 100%;
-            backdrop-filter: blur(12px);
-            /* Glass effect */
-            z-index: 50;
-            transition: width 0.3s ease;
+            align-items: center;
+            justify-content: center;
+            gap: 4px;
+            background: transparent;
+            border: none;
+            color: var(--text-muted);
+            cursor: pointer;
+            padding: 8px 12px;
+            border-radius: 12px;
+            transition: all 0.2s;
+            min-width: 60px;
+        }
+
+        .b-nav-item:hover {
+            color: var(--text-main);
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .b-nav-item.active {
+            color: var(--accent);
+        }
+
+        .b-nav-icon {
+            width: 24px;
+            height: 24px;
+        }
+
+        .b-nav-label {
+            font-size: 0.7rem;
+            font-weight: 500;
         }
 
         /* --- LOGO SECTION --- */
@@ -337,11 +382,10 @@
         @media (max-width: 767px) {
             body {
                 grid-template-areas:
-                    "sidebar"
                     "main"
                     "player";
                 grid-template-columns: 1fr;
-                grid-template-rows: auto 1fr var(--player-height);
+                grid-template-rows: 1fr var(--player-height);
             }
 
             .sidebar-container {
@@ -356,6 +400,8 @@
                 overflow-x: auto;
                 overflow-y: hidden;
                 white-space: nowrap;
+                display: none;
+                /* Hide sidebar on small tablets */
             }
 
             .brand-header {
@@ -1444,11 +1490,7 @@
             height: 100%;
             background: var(--text-muted);
             border-radius: 2px;
-            transition: background 0.2s;
-        }
-
-        .volume-rail:hover .volume-fill {
-            background: var(--text-main);
+            width: 100%;
         }
 
         /* --- RESPONSIVE LOGIC FOR PLAYER --- */
@@ -1635,7 +1677,7 @@
             height: 100%;
             position: relative;
             transform-style: preserve-3d;
-            transition: transform 0.6s cubic-bezier(0.4, 0.2, 0.2, 1);
+            transition: transform 0.6s cubic-bezier(0.4, 0.2, 0.2, 0.2, 1);
             cursor: pointer;
         }
 
@@ -1961,72 +2003,28 @@
 
 <body>
 
-    <!-- 1. LEFT SIDEBAR RESTORED -->
-    <nav id="sidebar" class="sidebar-container">
-        <div class="brand-header">
-            <div class="logo-icon-wrapper">
-                <i data-lucide="cpu" class="icon-glow"></i>
-            </div>
-            <span class="brand-text font-mono">HOPE <span class="text-accent">OS</span></span>
-        </div>
-
-        <div class="sidebar-scroll-area">
-            <div class="nav-group">
-                <h4 class="group-header font-mono">Library_V.2</h4>
-                <ul class="nav-list">
-                    <li>
-                        <button class="nav-item active" onclick="switchTab('podcasts')" aria-label="Library">
-                            <i data-lucide="mic"></i>
-                            <span class="nav-text">Podcasts</span>
-                            <div class="active-indicator"></div>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="nav-item" onclick="switchTab('videos')" aria-label="Video Stream">
-                            <i data-lucide="play-square"></i>
-                            <span class="nav-text">Video Stream</span>
-                            <div class="active-indicator"></div>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="nav-item" onclick="switchTab('mindmap')" aria-label="Neural Map">
-                            <i data-lucide="network"></i>
-                            <span class="nav-text">Neural Map</span>
-                            <div class="active-indicator"></div>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="nav-item" onclick="switchTab('flashcards')" aria-label="Flash Recall">
-                            <i data-lucide="zap"></i>
-                            <span class="nav-text">Flash Recall</span>
-                            <div class="active-indicator"></div>
-                        </button>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="nav-group">
-                <h4 class="group-header font-mono">S4_Modules</h4>
-                <ul class="nav-list">
-                    <li><button class="nav-item"><i data-lucide="hash"></i><span class="nav-text">Maths
-                                (Graph)</span></button></li>
-                    <li><button class="nav-item"><i data-lucide="database"></i><span class="nav-text">DBMS
-                                Arch</span></button></li>
-                    <li><button class="nav-item"><i data-lucide="cpu"></i><span class="nav-text">OS
-                                Principals</span></button></li>
-                    <li><button class="nav-item"><i data-lucide="code"></i><span class="nav-text">Data
-                                Science</span></button></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="sidebar-footer">
-            <button class="nav-item"><i data-lucide="settings"></i><span class="nav-text">Sys_Config</span></button>
-        </div>
+    <!-- BOTTOM NAV (Floating) -->
+    <nav class="bottom-nav" id="bottom-nav">
+        <button class="b-nav-item active" onclick="switchTab('podcasts')" id="nav-podcasts">
+            <i data-lucide="mic" class="b-nav-icon"></i>
+            <span class="b-nav-label">Podcasts</span>
+        </button>
+        <button class="b-nav-item" onclick="switchTab('videos')" id="nav-videos">
+            <i data-lucide="play-square" class="b-nav-icon"></i>
+            <span class="b-nav-label">Videos</span>
+        </button>
+        <button class="b-nav-item" onclick="switchTab('mindmap')" id="nav-mindmap">
+            <i data-lucide="network" class="b-nav-icon"></i>
+            <span class="b-nav-label">Map</span>
+        </button>
+        <button class="b-nav-item" onclick="switchTab('flashcards')" id="nav-flashcards">
+            <i data-lucide="zap" class="b-nav-icon"></i>
+            <span class="b-nav-label">Recall</span>
+        </button>
     </nav>
 
     <!-- 2. MAIN STAGE -->
-    <main id="main-stage" class="stage-container">
+    <main id="main-stage" class="stage-container" style="margin-left: 0.5rem;">
 
         <header class="stage-header">
             <div class="header-inner">
@@ -2568,17 +2566,37 @@
                         .catch(err => console.log('SW Failed:', err));
                 });
             }
+
+            // Scroll Logic for Bottom Nav
+            const viewport = document.querySelector('.content-viewport');
+            const bottomNav = document.getElementById('bottom-nav');
+            let lastScroll = 0;
+
+            if (viewport && bottomNav) {
+                viewport.addEventListener('scroll', () => {
+                    const currentScroll = viewport.scrollTop;
+
+                    if (currentScroll > lastScroll && currentScroll > 50) {
+                        // Scrolling Down > Hide
+                        bottomNav.classList.add('nav-hidden');
+                    } else {
+                        // Scrolling Up > Show
+                        bottomNav.classList.remove('nav-hidden');
+                    }
+                    lastScroll = currentScroll;
+                });
+            }
         }
 
         // --- NAVIGATION ---
         function switchTab(tabName) {
             state.currentTab = tabName;
 
-            // Update Active State on Sidebar
-            document.querySelectorAll('.nav-item').forEach(el => {
-                el.classList.remove('active');
-                if (el.getAttribute('onclick') && el.getAttribute('onclick').includes(`'${tabName}'`)) {
-                    el.classList.add('active');
+            // Update Bottom Nav Active State
+            document.querySelectorAll('.b-nav-item').forEach(btn => {
+                btn.classList.remove('active');
+                if (btn.id === `nav-${tabName}`) {
+                    btn.classList.add('active');
                 }
             });
 
