style: Update bottom navigation icons.

--- a/audio.htm
+++ b/audio.htm
@@ -2049,23 +2049,23 @@
     <!-- BOTTOM NAV (Floating) -->
     <nav class="bottom-nav" id="bottom-nav">
         <button class="b-nav-item active" onclick="switchTab('podcasts')" id="nav-podcasts">
-            <i data-lucide="mic" class="b-nav-icon"></i>
+            <i data-lucide="headphones" class="b-nav-icon"></i>
             <span class="b-nav-label">Podcasts</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('videos')" id="nav-videos">
-            <i data-lucide="play-square" class="b-nav-icon"></i>
+            <i data-lucide="youtube" class="b-nav-icon"></i>
             <span class="b-nav-label">Videos</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('mindmap')" id="nav-mindmap">
-            <i data-lucide="network" class="b-nav-icon"></i>
+            <i data-lucide="brain-circuit" class="b-nav-icon"></i>
             <span class="b-nav-label">Map</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('flashcards')" id="nav-flashcards">
-            <i data-lucide="zap" class="b-nav-icon"></i>
+            <i data-lucide="layers" class="b-nav-icon"></i>
             <span class="b-nav-label">Recall</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('context')" id="nav-context">
-            <i data-lucide="book-open" class="b-nav-icon"></i>
+            <i data-lucide="library-big" class="b-nav-icon"></i>
             <span class="b-nav-label">Context</span>
         </button>
     </nav>
