feat: update full player close button to display 'Back' text with an arrow icon and adjusted styling.

--- a/audio.htm
+++ b/audio.htm
@@ -2189,8 +2189,10 @@
     <!-- 5. FULL PLAYER OVERLAY -->
     <div id="full-player" class="full-player-overlay">
         <div class="fp-header" style="width: 100%;">
-            <button class="icon-btn-ghost" onclick="toggleFullPlayer()">
-                <i data-lucide="chevron-down"></i>
+            <button class="icon-btn-ghost" onclick="toggleFullPlayer()"
+                style="gap: 6px; padding-right: 12px; width: auto;">
+                <i data-lucide="arrow-left"></i>
+                <span class="font-mono text-sm">Back</span>
             </button>
             <span class="font-mono text-sm text-muted">NOW PLAYING</span>
             <button class="icon-btn-ghost">
