--- a/audio.htm
+++ b/audio.htm
@@ -2190,9 +2190,9 @@
     <div id="full-player" class="full-player-overlay">
         <div class="fp-header" style="width: 100%;">
             <button class="icon-btn-ghost" onclick="toggleFullPlayer()"
-                style="gap: 6px; padding-right: 12px; width: auto;">
-                <i data-lucide="arrow-left"></i>
-                <span class="font-mono text-sm">Back</span>
+                style="gap: 8px; padding: 8px 16px; width: auto; border-radius: 20px; background: rgba(255,255,255,0.1);">
+                <i data-lucide="chevron-down"></i>
+                <span class="font-mono text-sm" style="color: var(--text-main);">Minimize</span>
             </button>
             <span class="font-mono text-sm text-muted">NOW PLAYING</span>
             <button class="icon-btn-ghost">
@@ -3116,6 +3116,7 @@
                         miniPlayer.classList.add('visible');
                     }
                 }
+                lucide.createIcons();
             }
         }
 
